--- a/src/app/account/dashboard/gig/home-gigs/detail-gig/detail-gig.component.html
+++ b/src/app/account/dashboard/gig/home-gigs/detail-gig/detail-gig.component.html
@@ -1,8 +1,7 @@
 <mat-toolbar >
-  
-  <a href="#overview" fragment="overview">Overview</a>
-  <a href="#description" fragment="description">Description</a>
-  <a href="#seller" fragment="seller">About the seller</a>
+  <a>Overview</a>
+  <a>Description</a>
+  <a>About the seller</a>
 </mat-toolbar>
 
 
@@ -16,7 +15,7 @@
           <a class="my-3" style="margin-right: 2px;">{{gig.Category}} </a>
             >
           <a href="">{{gig.subCategoryId}}</a>
-          <div class="my-4" style="width: 100%;" id="overview"> 
+          <div class="my-4" style="width: 100%;" id="overview"  #overview> 
               <h2 class="mb-3">{{gig.gigtitle}}</h2>
          
               <div style="display: flex;align-items: center;">
@@ -33,13 +32,13 @@
               </div>
               <div class="card-body">
                 <img  class="card-img-top" src={{gig.photo}} style="width: 85%;">
-                <div class="description"  id="description">
+                <div class="description"  id="description" #description>
                   <h5 class="mt-3">About this gig</h5>
                   <div [innerHTML]="contentHtmlDes"></div>
                 </div>
                 <h5 class="mt-5">About this Seller</h5>
                 
-                <div class="seller mt-5" id="seller">
+                <div class="seller mt-5" id="seller" #seller>
 
                   <div class="box">
                     <div class="content">
@@ -108,6 +107,14 @@
                 <p class="my-4"> {{packOne.description}} </p>
                 <p><i class="bi bi-clock-history"></i> 10 Days Delivery</p>
               </div>
+              <div>
+                <a class="fancy" (click)="onCheckout(packOne)">
+                  <span class="top-key"></span>
+                  <span class="text">Proceed to payment</span>
+                  <span class="bottom-key-1"></span>
+                  <span class="bottom-key-2"></span>
+                </a>
+              </div>
             </mat-tab>
             <mat-tab label="Standard" *ngIf="x">
               <div class="m-4">
@@ -115,6 +122,14 @@
                 <p style="display: inline; float:right">{{packTwo.price| currency:'$'}}</p>
                 <p class="my-4"> {{packTwo.description}} </p>
                 <p><i class="bi bi-clock-history"></i> 10 Days Delivery</p>
+              </div>
+              <div>
+                <a class="fancy" (click)="onCheckout(packTwo)">
+                  <span class="top-key"></span>
+                  <span class="text">Proceed to payment</span>
+                  <span class="bottom-key-1"></span>
+                  <span class="bottom-key-2"></span>
+                </a>
               </div>
             </mat-tab>
             <mat-tab label="Premium"  *ngIf="x">
@@ -124,16 +139,17 @@
                 <p class="my-4"> {{packThree.description}} </p>
                 <p><i class="bi bi-clock-history"></i> 10 Days Delivery</p>
               </div>
+              <div>
+                <a class="fancy" (click)="onCheckout(packThree)">
+                  <span class="top-key"></span>
+                  <span class="text">Proceed to payment</span>
+                  <span class="bottom-key-1"></span>
+                  <span class="bottom-key-2"></span>
+                </a>
+              </div>
             </mat-tab>
           </mat-tab-group>
-          <div>
-            <a class="fancy" href="#">
-              <span class="top-key"></span>
-              <span class="text">Proceed to payment</span>
-              <span class="bottom-key-1"></span>
-              <span class="bottom-key-2"></span>
-            </a>
-          </div>
+         
           
         </div>
         <div class="card mt-4 p-3" *ngIf="!displayReviewVar"  >
