--- a/src/app/account/dashboard/gig/home-gigs/get-by-sub-category/get-by-sub-category.component.html
+++ b/src/app/account/dashboard/gig/home-gigs/get-by-sub-category/get-by-sub-category.component.html
@@ -1,43 +1,38 @@
 
-
-
-<p>get-by-sub-category works!</p>
-{{itemId}}
-<div class="album py-5 bg-body-tertiary">
+<div class="album py-5">
     <div class="container">
-  
+      
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3" >
         <div class="col" *ngFor="let gig of gigTable">
-          <div class="card shadow-sm">
-            <img mat-card-image src={{gig.photo}} alt="Photo of a Shiba Inu" width="100%" height="225">
-  
-              <mat-card class="example-card" >
-              
-             
-                
-                  <mat-card-header>
-                  <div mat-card-avatar class="example-header-image"></div>
-                  <mat-card-title>{{gig.CategoryId}}</mat-card-title>
-                  <mat-card-title><i>{{gig.subCategoryId}}</i></mat-card-title>
-                  <mat-card-subtitle>{{gig.nameUser}}</mat-card-subtitle>
-  
-                </mat-card-header>
-             
-              
-              </mat-card>
-  
-  
-            <div class="card-body">
-              <p><a [routerLink]="['/account/detail', gig._id]" class="lien"> {{gig.gigtitle}}</a></p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+         
+            <mat-card class="example-card mt-4" style="width: 90%; height:100%;">
+              <img mat-card-image src="{{gig.photo}}" alt="Photo of a Shiba Inu" width="100%" height="225">
+              <mat-card-header>
+                <div mat-card-avatar class="example-header-image">                 
+                  <img src="../../../../../assets/pics/user1.jpeg" class="userpic">
                 </div>
-                <small class="text-body-secondary">9 mins</small>
-              </div>
-            </div>
-          </div>
+                <mat-card-title>{{gig.nameUser}}</mat-card-title>
+                <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+              </mat-card-header>
+              <mat-card-content>
+                <p>
+                  <a [routerLink]="['/account/detail', gig._id]" class="lien" > 
+                    {{gig.gigtitle | collapseText: 10}}
+                  </a>
+                </p>
+                
+                <mat-divider></mat-divider>
+                <div class="flex-container" style="align-items: center;">
+                    <i class="bi bi-heart-fill" style="color:#5f5f5f; cursor:pointer"         
+                    matTooltip="Add to wishlist"
+                    ></i> 
+                    <h6 class="mt-3" style="font-size: 10px;">
+                      <b style="margin-right: 6px;"> STARTING AT </b> 
+                      <span style="font-size: 17px; align-items:center "> {{gig.pricePack | currency:'$'}} </span></h6> 
+                </div>
+              </mat-card-content>    
+            </mat-card>
+  
         </div>
        
       </div>
