--- a/src/app/account/dashboard/gig/home-gigs/home-gigs.component.html
+++ b/src/app/account/dashboard/gig/home-gigs/home-gigs.component.html
@@ -6,13 +6,6 @@
   </mat-toolbar>
 
 
-
-
-
-
-
-
-
  <div class="album py-5" >
   <div class="container-fluid">
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-4" >
@@ -28,7 +21,7 @@
               <img src="../../../../../assets/pics/user1.jpeg" class="userpic">
             </div>
             <mat-card-title>{{gig.nameUser}}</mat-card-title>
-            <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+            <mat-card-subtitle>{{gig.usernameUser}}</mat-card-subtitle>
           </mat-card-header>
           <mat-card-content>
             <p>
@@ -42,6 +35,7 @@
             <div class="flex-container" style="align-items: center;">
                 <i class="bi bi-heart-fill" style="color:#5f5f5f; cursor:pointer"         
                 matTooltip="Add to wishlist"
+                (click)="addWishlist(gig)"
                 ></i> 
                 <h6 class="mt-3" style="font-size: 10px;">
                   <b style="margin-right: 6px;"> STARTING AT </b> 
@@ -50,6 +44,8 @@
           </mat-card-content>    
         </mat-card>
        
+
+
       </div>
       
      
